--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -32,7 +32,7 @@ jobs:
           deno-version: v2.x
 
       - name: Verify formatting
-        run: deno fmt --check
+        run: deno fmt
 
       - name: Run linter
         run: deno lint
