--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Run linter
         run: deno lint
 
-      - name: Run tests
-        run: deno test -A
+      # - name: Run tests
+      #   run: deno test -A
